# ipacl

./: .gitignore  Cargo.toml  LICENSE  README.md  fastly.toml
src/: ip_list.json  main.rs
