[package]
name = "ipacl"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "^0.9.1"
time = { version = "*", features = ["macros", "formatting"] }
ipnet = { version = "2.5.0", features = ["serde"] }
serde_json = "^1.0"
bincode = "^1.3.3"
num = "0.4.0"
futures = "0.3.25"
